# Project_KAI

./: .gitignore  NOTES.md  README.md  TODO  app.py  ingest_data.py  junk.py  pyproject.toml  run.bat  run_update.bat  settings.py  vector_db.py
KAI_backend/: README.md  env.yaml  main.py  pre_setup_link.bat  quantize_and_load.py  s1.py  setup.bat  setup_link.bat
KAI_frontend_app/: facial_test.py  quicktest_hf.py  test_gradio_iframe.html  validate_img.py
Kai/: answer.py  ingest_data.py  search.py  setting.py  setup.py  test_flow.py
documentation/: initial_setup.md
experiment_junks/: mistral_hf.py  mistral_yip.py  quantise_code.py  test_run.py
google_calendar/: contacts.py  credentials.json  gmail.py  google_module.py  quick_start.py  sample_events.json  token.json
hf/hub/models--sentence-transformers--multi-qa-MiniLM-L6-cos-v1/refs/: main
thunderbird/: README.md  mail_SQL.py  query_sql_db.py  sample_responses.json  tb_chroma_classes.py
