[tool.poetry]
name = "project-kai"
version = "0.0.1"
description = ""
authors = ["Ludwig Hoon <ldwgkshoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
fastapi = "^0.110.0"
torch = {version = "^2.2.2+cu121", source = "pytorch-gpu-src"}
transformers = {extras = ["torch"], version = "^4.39.3"}
uvicorn = "^0.29.0"
click = "^8.1.7"
pypdf = "^4.1.0"
docx2txt = "^0.8"
chromadb = "^0.4.24"
loguru = "^0.7.2"
tiktoken = "^0.6.0"
wikipedia = "^1.4.0"
tqdm = "^4.66.2"
gradio = "^4.25.0"

[[tool.poetry.source]]
name = "pytorch-gpu-src"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 120

[tool.ruff]
# Same as Black.
line-length = 120

exclude = ["jupyter_notebook_config.py"]
select = [
    "E",  # pycodestyle errors (settings from FastAPI, thanks, @tiangolo!)
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
]

[tool.ruff.isort]
order-by-type = true
relative-imports-order = "closest-to-furthest"
extra-standard-library = ["typing"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
known-first-party = []